# rviz_annotator

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
config/: plugin_params.yaml
include/rviz_annotator/: edit_widget.h  point_class.h  point_selection.h  rviz_annotation_panel.h  rviz_control_panel.h  rviz_rosbag_player.h  rviz_time_translator.h
msg/: PointSelection.msg
src/: edit_widget.cpp  export_bag.cpp  point_class.cpp  point_selection.cpp  rviz_annotation_panel.cpp  rviz_control_panel.cpp  rviz_rosbag_player.cpp  rviz_time_translator.cpp
test/: test.rviz
